<?xml version="1.0" encoding="utf-8"?>
<!-- 
   Copyright 2012 Eliezer Graber (Custom Programming Solutions)
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
<resources>

    <string name="app_name">Media Streamer</string>
    <string name="url_text_hint">Enter URL (either HTTP or RTSP)</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_add_favorite">Add Favorite</string>
    
    <string name="recents_context_menu_add_to_favorites">Add to Favorites</string>
    <string name="recents_context_menu_delete">Delete</string>
    <string name="favorites_context_menu_delete">Delete</string>
    <string name="favorites_context_menu_edit">Edit</string>
    
    <string name="favorite_dialog_title">Add a Favorite</string>
    <string name="favorite_dialog_name">Name</string>
    <string name="favorite_dialog_name_hint">Enter a name</string>
    <string name="favorite_dialog_url">URL</string>
    <string name="favorite_dialog_url_hint">Enter a URL</string>
    <string name="favorite_dialog_positive_label_add">Add</string>
    <string name="favorite_dialog_positive_label_edit">Save</string>
    <string name="favorite_dialog_negative_label">Cancel</string>
    <string name="favorite_dialog_name_error">That name is already in use; please use another</string>
    <string name="favorite_dialog_url_error">That url is already in use; please use another</string>
    
    <string name="pref_timeout_title">Initial Connection Timeout</string>
    <string name="pref_timeout_summary">Press here to set the initial connection timeout. If you have a slower connection, use a higher timeout value. For faster connections, a lower timeout value is better.</string>
    <string name="pref_timeout_key">prefTimeout</string>
    <string name="pref_timeout_default">60</string>
    <string name="pref_notification_title">Persistent Notification</string>
    <string name="pref_notification_summary">When Persisten Notifications are enabled, there will be a bar in the notification shade allowing you to start and stop a stream from outside of the app. It will stay there until the app is killed, or the X in the corner of the notification is pressed. When it is disabled, the notification will remain in the shade as long as there is a stream playing.</string>
    <string name="pref_notification_key">prefNotification</string>
    <string name="pref_notification_default">true</string>
    
    <string name="title_activity_main">Media Streamer</string>
    
    <string name="media_state_indicator_desc">Play/Stop</string>
    <string name="notification_icon_content_desc">Notification Icon</string>
    <string name="close_notification_icon_content_desc">Close Notification Icon</string>
    
    <string name="media_player_error">Error playing stream!</string>
    <string name="audio_focus_denied_error">System is preventing playback of stream. Please try again.</string>
    <string name="error_empty_url">URL cannot be empty</string>
    <string name="error_invalid_url">URL must start with http:// or rtsp:// (other protocols will be supported in the future)</string>
    
    <string name="http_prefix">http://</string>
    <string name="connection_timeout_msg">The connection timed out. Please try again later</string>
    
    <string name="notification_title">Media Streamer</string>

</resources>