<?xml version="1.0" encoding="utf-8"?>
<!-- 
   Copyright 2012 Eliezer Graber (Custom Programming Solutions)
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <ListPreference
        android:title="@string/pref_timeout_title"
        android:summary="@string/pref_timeout_summary"
        android:entries="@array/timeout_durations"
        android:entryValues="@array/timeout_duration_values"
        android:defaultValue="@string/pref_timeout_default"
        android:key="@string/pref_timeout_key" />
    
    <CheckBoxPreference
    	android:title="@string/pref_notification_title"
        android:defaultValue="@string/pref_notification_default"
        android:summary="@string/pref_notification_summary"
        android:key="@string/pref_notification_key" />

</PreferenceScreen>