<?xml version="1.0" encoding="utf-8"?>
<!-- 
   Copyright 2012 Eliezer Graber (Custom Programming Solutions)
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/stream_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/media_player_error"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/url_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/stream_error_text"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/url_text_hint"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/media_state_indicator_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/url_bar"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:contentDescription="@string/media_state_indicator_desc"
        android:src="@drawable/play_button" />

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/media_state_indicator_button" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
			
                <ListView
                    android:id="@+id/recents_tab" 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ListView
                    android:id="@+id/favorites_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
